# mgsquash

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  pytest.ini
mgsquash/: MGSquash.py  WavData.py  __init__.py
morphagently/: Morphagently.py  WavData.py  __init__.py  example.py  utils.py
tests/: conftest.py  test_sample.py
