[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mgsquash"
version = "0.0.1"
authors = [
  { name="Larry Turtis", email="gary.kertis@gmail.com" },
]
description = "Replace silence with Morphagene splice markers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LarryTurtis/mgsquash"
"Bug Tracker" = "https://github.com/LarryTurtis/mgsquash/issues"